Added paragraph on feat c

--- a/feat-c.html
+++ b/feat-c.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Feature C</h1>
+    <p>This is an additional feature that builds upon the previous features.</p>
 </body>
 </html>
