--- a/feat-c.html
+++ b/feat-c.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Feature C</h1>
     <p>This is an additional feature that builds upon the previous features.</p>
+    <a>Click me</a>
 </body>
 </html>
