--- a/feat-z.html
+++ b/feat-z.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Feature D</h1>
+    <p>This is the final feature that completes the set of features.</p>
 </body>
 </html>
