--- a/feat-z.html
+++ b/feat-z.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Feature D</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, ipsam.</p>
     <p>This is the final feature that completes the set of features.</p>
 </body>
 </html>
